--- a/home.html
+++ b/home.html
@@ -3,5 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <div class="logo">
+    <img src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
+  </div>
 </head>
 </html>
