--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/QuiltImage/website/home/favicon.svg"/>
   <div class="logo">
     <img src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
   </div>
