--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/QuiltImage/website/home/favicon.svg"/>
+  <title>QMA - Hompage</title>
   <div class="logo">
     <img src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
   </div>
