--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en">
+<body>
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
@@ -8,5 +9,7 @@
   <div class="logo">
     <img src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
   </div>
+  
 </head>
+</body>
 </html>
