--- a/home.html
+++ b/home.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/QuiltImage/website/home/favicon.svg"/>
   <title>QMA - Hompage</title>
-  <div class="logo">
+  <div class="navigation-bar">
+    <div id="navigation-bar">
     <img src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
   </div>
   
