--- a/home.html
+++ b/home.html
@@ -8,6 +8,10 @@
   <title>QMA - Hompage</title>
   <nav class="navigation-bar">
     <img class="logo" src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">about</a></li>
+    </ul>
   </nav>
 </head>
 </body>
