--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/QuiltImage/website/home/favicon.svg"/>
   <title>QMA - Hompage</title>
   <nav class="navigation-bar">
-    <img class="logo" src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg"/>
+    <img class="logo" src="https://raw.githubusercontent.com/QuiltImage/website/main/logo.svg" width="250" height="150"/>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">about</a></li>
